--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "nodemailer": "^6.6.3",
     "react-hook-form": "^7.12.2",
     "react-toastify": "^7.0.4",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
+    "sweetalert2": "^11.1.3",
     "util": "^0.12.4",
     "validator": "^13.6.0"
   },
