--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,10 @@
     "react-scripts": "4.0.3",
     "react-stars": "^2.2.5",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
+    "sweetalert2": "^11.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
